# cppyy-backend

./: CMakeLists.txt  MODULE.bazel  README.md  README.rst
.github/workflows/: MacOS.yml  Ubuntu.yml  Windows.yml  bazel.yml  ci.yml  emscripten.yml
clingwrapper/: pyproject.toml  setup.py
clingwrapper/src/: capi.h  clingwrapper.cxx  cpp_cppyy.h  cppinterop_dispatch.cxx
include/: cpp_cppyy.h
python/cppyy_backend/: loader.py
src/: clingwrapper.cxx
